--- a/home-decor/src/styles/Navbar.module.css
+++ b/home-decor/src/styles/Navbar.module.css
@@ -1,25 +1,18 @@
 .main_div_1 {
     /* border: 1px solid; */
-    width: 100vw;
+    max-width: 100%;
     height: 70px;
+    padding:0px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
     background-color: #902735;
     color: white;
     font-family: sans-serif;
     
 }
-
-.img_div {
-    /* border: 1px solid; */
-    width: 20%;
-    
-}
-
 .img_div>img {
-    width: 22%;
+    width: 60px;
     margin: auto;
     height: 100%;
 
@@ -67,22 +60,22 @@
 }
 
 @media screen and (min-width: 425.5px) and (max-width:768px) {
-    .img_div{
+    /* .img_div{
         width: 35%;
-    }
+    } */
     .input_icon{
         display: none;
     }
 }
 @media screen and (min-width: 320px) and (max-width:425.5px) {
-    .img_div{
+    /* .img_div{
         width: 40%;
         height: 99%;
         /* border: 1px solid white; */
-    }
-    .img_div>img{
+    /* } */ 
+    /* .img_div>img{
         width: 50%;
-    }
+    } */
     .input_icon{
         display: none;
     }
