--- a/home-decor/src/components/Products/ProductsCard.module.css
+++ b/home-decor/src/components/Products/ProductsCard.module.css
@@ -13,12 +13,18 @@
 }
 
 .image {
-  width: 60%;
+  width: 100%;
   height: 250px;
+  cursor : pointer;
+}
+.image:hover {
+  background-color : lightgrey;
 }
 
 .image > img {
-  width: 100%;
+  width: 60%;
+  display : block;
+  margin:auto;
   height: 100%;
 }
 
