--- a/home-decor/src/components/Products/ProductsCard.module.css
+++ b/home-decor/src/components/Products/ProductsCard.module.css
@@ -15,16 +15,16 @@
 .image {
   width: 100%;
   height: 250px;
-  cursor : pointer;
+  cursor: pointer;
 }
 .image:hover {
-  background-color : lightgrey;
+  background-color: lightgrey;
 }
 
 .image > img {
   width: 60%;
-  display : block;
-  margin:auto;
+  display: block;
+  margin: auto;
   height: 100%;
 }
 
@@ -84,8 +84,28 @@
   cursor: pointer;
 }
 
+.cartAdded {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 20px;
+  background-color: orange;
+  border-radius: 10px;
+  width: 100%;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+}
+
 .cart:hover {
   background-color: #560712;
+}
+
+.cartAdded:hover {
+  background-color: rgb(138, 90, 0);
 }
 
 /* meidum screens */
@@ -160,6 +180,22 @@
     color: white;
     cursor: pointer;
   }
+
+  .cartAdded {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 20px;
+    background-color: orange;
+    border-radius: 10px;
+    width: 100%;
+    padding: 5px;
+    color: white;
+    cursor: pointer;
+  }
 }
 
 /* small screens */
@@ -228,6 +264,22 @@
     font-weight: 400;
     line-height: 20px;
     background-color: #902735;
+    border-radius: 10px;
+    width: 100%;
+    padding: 5px;
+    color: white;
+    cursor: pointer;
+  }
+
+  .cartAdded {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 20px;
+    background-color: orange;
     border-radius: 10px;
     width: 100%;
     padding: 5px;
